--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
     "nodemon": "^2.0.22"
