--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
   }
 }
